# labscript-devices

./: .gitignore  AlazarTechBoard.py  BSD-3-CLAUSE-LICENSE.txt  Camera.py  Camera_acqROI.py  CiceroOpalKellyXEM3001.py  DummyDevice.py  DummyIntermediateDevice.py  DummyPseudoclock.py  LICENSE.txt  LightCrafter.py  LightCrafterDMD.py  NEWS.md  NIBoard.py  NI_PCI_6733.py  NI_PCIe_6363.py  NI_USB_6343.py  NI_generic.py  NewPortMirrorController8742.py  NovaTechDDS9M.py  PhaseMatrixQuickSyn.py  PineBlaster.py  PulseBlaster.py  PulseBlasterESRPro200.py  PulseBlasterESRPro500.py  PulseBlasterUSB.py  PulseBlaster_No_DDS.py  PulseBlaster_SP2_24_100_32k.py  PythonCamera.py  README.md  RFBlaster.py  RFBlaster_kloned.py  SLM.py  ZaberStageController.py  __init__.py  alazar.ui  atsapi.py  camera.ui  imaqdx_server.py  phasematrixquicksyn.ui  (+5 more)
.github/workflows/: release-vars.sh  release.yml
AndorSolis/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  runviewer_parsers.py
AndorSolis/andor_sdk/: andor_solis.py  andor_structures.py  andor_utils.py
DummyPseudoclock/: __init__.py  blacs_tab.py  blacs_tabs.py  blacs_worker.py  blacs_workers.py  labscript_device.py  labscript_devices.py  register_classes.py  tab.py  worker.py
FlyCapture2Camera/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py
FunctionRunner/: __init__.py  blacs_tabs.py  blacs_workers.py  register_classes.py  utils.py
FunctionRunner/testing/: test.py
IMAQdxCamera/: __init__.py  attributes_dialog.ui  blacs_tab.ui  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py
IMAQdxCamera/testing/: test.py
NI_DAQmx/: __init__.py  base_class.py  blacs_tab.py  blacs_tabs.py  blacs_workers.py  daqmx_utils.py  labscript_devices.py  register_classes.py  runviewer_parser.py  utils.py  workers.py
NI_DAQmx/models/: NI_PCI_6251.py  NI_PCI_6713.py  NI_PCI_6733.py  NI_PCI_DIO_32HS.py  NI_PCIe_6363.py  NI_PCIe_6738.py  NI_PXI_6733.py  NI_PXIe_6535.py  NI_PXIe_6738.py  NI_USB_6008.py  NI_USB_6229.py  NI_USB_6343.py  README.txt  __init__.py  _subclass_template.py  capabilities.json  generate_subclasses.py  get_capabilities.py  update_capabilities.py
NI_DAQmx/testing/: test_NI_DAQmx_labscript.py
PylonCamera/: __init__.py  blacs_workers.py
PylonCamera/testing/: ExposureTiming.py
SoftwareDevice/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py  utils.py
SoftwareDevice/testing/: test.py
TekScope/: TekScope.py  blacs_tab.py  blacs_tabs.py  blacs_worker.py  blacs_workers.py  register_classes.py
ZaberStageController/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  utils.py
ZaberStageController/testing/: test.py
docs/: Makefile  make.bat
docs/source/: adding_devices.rst  conf.py  devices.rst  ex_conn_tables.rst  index.rst  introduction.rst  user_devices.rst
labscript_devices/: AlazarTechBoard.py  Camera.py  CiceroOpalKellyXEM3001.py  DummyIntermediateDevice.py  LightCrafterDMD.py  NI_PCI_6733.py  NI_PCIe_6363.py  NI_USB_6343.py  NovaTechDDS9M.py  PhaseMatrixQuickSyn.py  PineBlaster.py  PulseBlaster.py  PulseBlasterESRPro200.py  PulseBlasterESRPro500.py  PulseBlasterUSB.py  PulseBlaster_No_DDS.py  PulseBlaster_SP2_24_100_32k.py  PythonCamera.py  RFBlaster.py  __init__.py  __version__.py  atsapi.py  camera.ui  imaqdx_server.py  spec  test_device.py
labscript_devices/AD9959DDSSweeper/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py  runviewer_parser.py  runviewer_parsers.py
labscript_devices/AlliedVisionCamera/: blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py
labscript_devices/AndorSolis/: blacs_workers.py  register_classes.py
labscript_devices/BS_341A/: BLACS_tabs.py  BLACS_workers.py  BS_341A.md  emulateSerPort.py  first_connection.py  labscript_devices.py  logger_config.py  register_classes.py  test_bs341A_queries.py  voltage_source.py
labscript_devices/BS_Series/: BLACS_tabs.py  BLACS_workers.py  BS_341A.md  labscript_devices.py  logger_config.py  register_classes.py  utils.py  voltage_source.py
labscript_devices/DummyPseudoclock/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py  runviewer_parsers.py
labscript_devices/FlyCapture2Camera/: blacs_tabs.py  blacs_workers.py  labscript_devices.py
labscript_devices/FunctionRunner/: __init__.py  blacs_workers.py  labscript_devices.py  utils.py
labscript_devices/GeniCam/: attributes_dialog.ui  blacs_tab.ui  blacs_tabs.py  blacs_workers.py  genicam_feature_tree_widget.py  genicam_test.py  genicam_widget.py  labscript_devices.py  register_classes.py
labscript_devices/IMAQdxCamera/: blacs_tab.ui  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py
labscript_devices/KeysightScope/: KeysightScope.py  README.md  STBstatus.ui  __init__.py  blacs_tabs.py  blacs_workers.py  connection_manager.py  draft_pull_request_message.txt  labscript_devices.py  (+4 more)
(+199 files in other folders)
