[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}


[project]
name = "labscript-devices"
description = "Device drivers for hardware controlled by the labscript suite"
authors = [
    {name = "The labscript suite community", email = "labscriptsuite@googlegroups.com"},
]
keywords = ["experiment control", "automation"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "blacs>=3.0.0",
    "runmanager>=3.0.0",
    "labscript>=3.0.0",
    "labscript_utils>=3.0.0",
    "numpy>=1.15.1",
    "pillow",
    "tqdm",
    "PyDAQmx",
    "PyVISA",
    "PyNIVision",
    "pyserial",
    "qtutils>=2.2.3",
    "spinapi",
    "zprocess>=2.18.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "http://labscriptsuite.org/"
Documentation = "https://docs.labscriptsuite.org/"
Repository = "https://github.com/labscript-suite/labscript-devices/"
Downloads = "https://github.com/labscript-suite/labscript-devices/releases/"
Tracker = "https://github.com/labscript-suite/labscript-devices/issues/"

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst_parser==4.0.1",
]
