[metadata]
name = labscript-devices
description = Device drivers for hardware controlled by the labscript suite
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript-devices
    Download=https://github.com/labscript-suite/labscript-devices/releases
    Tracker=https://github.com/labscript-suite/labscript-devices/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  blacs>=3.0.0
  runmanager>=3.0.0
  importlib_metadata
  labscript>=3.0.0
  labscript_utils>=3.0.0
  numpy>=1.15.1
  pillow
  tqdm
  PyDAQmx
  PyVISA
  PyNIVision
  pyserial
  qtutils>=2.2.3
  spinapi
  zprocess>=2.18.0

[options.extras_require]
docs = 
  PyQt5
  Sphinx==4.4.0
  sphinx-rtd-theme==0.5.2
  recommonmark==0.6.0
  m2r==0.2.1
  mistune<2.0.0
